# da4hiflow

./: .gitignore  AGENTS.md  CONTRIBUTING.md  DA4HSF.ipynb  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: linear1d_denkf.json  linear1d_direct_insert.json  linear1d_enkf.json  shocktube_denkf.json  shocktube_enkf.json
da4hiflow/: __init__.py
da4hiflow.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
da4hiflow/assimilators/: __init__.py  denkf.py  direct_insertion.py  enkf.py
da4hiflow/core/: __init__.py  assimilator_base.py  noise.py  obs.py  runner.py  runner_new.py  runner_old.py  system_base.py
da4hiflow/systems/: __init__.py  euler1d_shocktube.py  linear1d.py
da4hiflow/viz/: __init__.py
myruns/quicktest/: config.json  metrics.csv  snapshots.npz
notebooks/: visualize_shocktube_enkf.ipynb
runs/20260303_175739/: config.json  metrics.csv  snapshots.npz
runs/shocktube_hr_enkf/: config.json  metrics.csv  snapshots.npz
scripts/: run_experiment.py
tests/: __init__.py  test_denkf_improves_rmse.py  test_enkf_improves_rmse.py  test_import.py  test_reproducibility.py  test_reproducibility_denkf.py  test_reproducibility_enkf.py  test_runner_outputs_created.py  test_shocktube_enkf_smoke.py  test_shocktube_solver.py  test_smoke_runner.py
tmp_run/debug_shock/: config.json
